fix getImages and add countImage api
